Bug 167358 - FORMS: Label controls, saved without border, will be shown with 3D-border
Summary: FORMS: Label controls, saved without border, will be shown with 3D-border
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.2.4.3 release
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:26.2.0 target:25.8.0.2 target:...
Keywords: bibisected, bisected, regression
: 167778 167884 167954 168224 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-07-03 06:26 UTC by Robert Großkopf
Modified: 2025-09-23 08:43 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Großkopf 2025-07-03 06:26:23 UTC
Create a new Writer document.
Go to Form → Label
Create a label, save the file and reopen the file.
Label will be shown with 3D-border, not without border as it has been created.

It is impossible to save a label without border since 
Version: 25.2.5.1 (X86_64) / LibreOffice Community
Build ID: 484541f705153d4ff78284873b0153c3e5a280db
CPU threads: 6; OS: Linux 6.4; UI render: default; VCL: kf5 (cairo+xcb)
Locale: de-DE (de_DE.UTF-8); UI: en-US
Calc: threaded

Works well in all other versions of LO before.
So a regressions, which destroys design of all forms here.
Comment 1 m_a_riosv 2025-07-04 01:10:32 UTC
Reproducible
Version: 25.2.5.1 (X86_64) / LibreOffice Community
Build ID: 484541f705153d4ff78284873b0153c3e5a280db
CPU threads: 16; OS: Windows 11 X86_64 (10.0 build 26100); UI render: Skia/Raster; VCL: win
Locale: en-US (es_ES); UI: en-US
Calc: CL threaded
Comment 2 Saburo 2025-07-10 02:28:40 UTC
bibisected with win64-25.8
commit d4dad2e181fd2dc30c3916fd59c05745023a51c8
author	Justin Luth

tdf#156707 xmloff import: always provide ControlBorder property #2

In LO 7.5, ORichTextModel changed the app default to use a flat border
(in order to better match how PDF/print looks)
while the file-spec's default for undefined borders is 3d,
so during import time we ALWAYS need to specify 3d as the border.

The patch replaces 25.2 commit 5a617f77ee803eb65051e93f659ef66433879052
    tdf#156707 xmloff import: always provide ControlBorder property
which wasn't wrong, but just was incomplete.
It only handled the situation where there was a fo:border element
which didn't specify 3d/flat/none,
but didn't handle the situation where there was no fo:border at all
in style:graphic-properties.

[On export, since the 3d property is the default value,
fo:border is not even provided as something to be exported,
and therefore only "solid" and "none"
are ever exported as fo:border qualifiers.]

I modified the unit test to remove the fo:border
by clearing the unused-by-3d green border colour
(although the green was seen if the wrong flat border was assigned).

make CppunitTest_xmloff_style CPPUNIT_TEST_NAME=testTdf156707

Change-Id: I70718fe964a7c3578f8edbf8591fe2e3417ec60b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/185619
Comment 3 Commit Notification 2025-07-11 11:46:16 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0ad0fc985cc4b1c8f05df1e64752ae045127c051

tdf#167358 Revert "tdf#156707 xmloff import: always provide ControlBorder

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2025-07-12 08:46:19 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/23be40db1965b4ea40abef7b8a3f29680d0aa3c6

tdf#167358 Revert "tdf#156707 xmloff import: always provide ControlBorder

It will be available in 25.8.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2025-07-12 08:46:25 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/22fc7d629e4c2c43e4ed296fcabe27b5b97e65e0

tdf#167358 Revert "tdf#156707 xmloff import: always provide ControlBorder

It will be available in 25.2.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 m_a_riosv 2025-08-02 22:57:56 UTC
*** Bug 167778 has been marked as a duplicate of this bug. ***
Comment 7 Saburo 2025-08-10 14:34:48 UTC Comment hidden (obsolete)
Comment 8 Saburo 2025-08-10 14:35:01 UTC
*** Bug 167884 has been marked as a duplicate of this bug. ***
Comment 9 Regina Henschel 2025-08-15 10:50:28 UTC
*** Bug 167954 has been marked as a duplicate of this bug. ***
Comment 10 mc 2025-08-25 17:10:48 UTC
(In reply to Commit Notification from comment #4)
> Justin Luth committed a patch related to this issue.
> It has been pushed to "libreoffice-25-8":
> 
> https://git.libreoffice.org/core/commit/
> 23be40db1965b4ea40abef7b8a3f29680d0aa3c6
> 
> tdf#167358 Revert "tdf#156707 xmloff import: always provide ControlBorder
> 
> It will be available in 25.8.0.2.
> 
> The patch should be included in the daily builds available at
> https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
> information about daily builds can be found at:
> https://wiki.documentfoundation.org/Testing_Daily_Builds
> 
> Affected users are encouraged to test the fix and report feedback.


With 25.8.4 work, but old Base documents are compromises, need to set the border type again in all forms
Comment 11 Robert Großkopf 2025-08-25 17:21:01 UTC
(In reply to mc from comment #10)
> 
> With 25.8.4 work, but old Base documents are compromises, need to set the
> border type again in all forms

Working here with LO 25.8.0.4 without any problems. All old forms will be shown correct without any border around the label controls.
Have never set any border type for the label controls, but if someone set it it should be shown…

Version: 25.8.0.4 (X86_64)
Build ID: 48f00303701489684e67c38c28aff00cd5929e67
CPU threads: 6; OS: Linux 6.4; UI render: default; VCL: kf5 (cairo+xcb)
Locale: de-DE (de_DE.UTF-8); UI: de-DE
Calc: threaded
Comment 12 mc 2025-08-28 06:24:49 UTC
(In reply to Robert Großkopf from comment #11)
.. All old forms will be
> shown correct without any border around the label controls.
> Have never set any border type for the label controls, but if someone set it
> it should be shown…
> 
Yes but not for all forms. If forms is modified during this issue, border remain in 3D, also if never changed the 3D border option.
Comment 13 m_a_riosv 2025-09-01 10:49:21 UTC
*** Bug 168224 has been marked as a duplicate of this bug. ***