include/xmloff/txtimppr.hxx
@@ -60,8 +60,9 @@ public:
     virtual ~XMLTextImportPropertyMapper() override;
 
     /** This method is called when all attributes have benn processed. It may be used to remove items that are incomplete */
-    virtual void finished(std::vector<XMLPropertyState>& rProperties, sal_Int32 nStartIndex,
-                          sal_Int32 nEndIndex, const sal_uInt32 nPropType) const override;
+    virtual void finished(
+            ::std::vector< XMLPropertyState >& rProperties,
+            sal_Int32 nStartIndex, sal_Int32 nEndIndex ) const override;
 };
 
 #endif // INCLUDED_XMLOFF_TXTIMPPR_HXX
