xmloff/inc/XMLChartPropertySetMapper.hxx
@@ -94,8 +94,9 @@ public:
         const SvXMLUnitConverter& rUnitConverter,
         const SvXMLNamespaceMap& rNamespaceMap ) const override;
 
-    virtual void finished(std::vector<XMLPropertyState>& rProperties, sal_Int32 nStartIndex,
-                          sal_Int32 nEndIndex, const sal_uInt32 nPropType) const override;
+    virtual void finished(
+        ::std::vector< XMLPropertyState >& rProperties,
+        sal_Int32 nStartIndex, sal_Int32 nEndIndex ) const override;
 };
 
 /* vim:set shiftwidth=4 softtabstop=4 expandtab: */
